# linqua-chain

./: .gitignore  Cargo.toml  Changelog.md  README.md  dummy_data.csv
src/: lib.rs  main.rs  old_main.rs  pre_process.rs
src/core/: embedding_config.rs  llm_config.rs  vectordb_config.rs
src/default_prompts_store/: ccm.yml  sqm.yml
src/embeddings_mod/: base_embeddings.rs  fast_embed.rs
src/llm_mod/: base_llm.rs  llama_llm.rs  ollama_llm.rs  openai.rs  openai_llm.rs
src/rdbms_mod/: base_rdbms.rs  polars_data.rs
src/structured_data/: ccm.rs  cdom.rs  sqm.rs
src/vectordb_mod/: base_vectordb.rs  qdrant_db.rs  qdrantdb.rs
