[package]
name = "linqua-chain"
version = "0.1.0"
edition = "2021"
authors = ["Karthik <karthik.gk97@gmail.com>"]

[[bin]]
name = "pre_process"
path = "src/pre_process.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
qdrant-client = "1.6.0"
serde_json = {version = "1.0.108"}
tokio = { version = "1.34.0", features = ["full"] }
tonic = "0.10.2"
log = "0.4.20"
env_logger = "0.10.0"
async-trait = "0.1.74"
fastembed = "1.9.0"
maplit = "1.0.2"
polars = "0.35.4"
polars-sql = "0.35.4"
polars-lazy = "0.35.4"
ollama-rs = "0.1.2"
serde_yaml = "0.9.27"
uuid = {version = "1.6.1", features = ["v5", "fast-rng"]}
sha256 = "1.4.0"
